@@ -1,3 +1,6 @@
+2014-09-03 Florent Thery <florent.thery@bull.net>
+	* Trigger different actions based on modified options (ticket #180)
+
 2014-08-21 Florent Thery <florent.thery@bull.net>
 	* Fix error message format issue when using the same index twice
 	(ticket #181)
